python-web-server/tests/http/requests/invalid/chunked_12.py
from web_server.http.errors import InvalidChunkSize

request = InvalidChunkSize
